--- a/EduWell/users/templates/core/dashboard.html
+++ b/EduWell/users/templates/core/dashboard.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Dashboard</title>
-  <link rel="stylesheet" href="{% static 'core/style.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'core/styles.css' %}">
 </head>
 <body class="page-bg">
 
